<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/reservas"
        android:checkableBehavior="single" >
        <menu>
            <item
                android:id="@+id/nav_criarReserva"
                android:title="@string/criar_reserva"
                android:icon="@drawable/ic_criar_reserva"/>
            <item
                android:id="@+id/nav_estadoReservas"
                android:title="@string/estado_de_reservas"
                android:icon="@drawable/ic_estado_reserva"/>
        </menu>
    </item>

    <item android:title="@string/servicos" >
        <menu>
            <item
                android:id="@+id/nav_servicoQuartos"
                android:title="@string/servico_de_quartos"
                android:icon="@drawable/ic_servicos"/>
            <item
                android:id="@+id/nav_classificacao"
                android:title="@string/classificacao"
                android:icon="@drawable/ic_classificacao"/>
        </menu>
    </item>

    <item android:title="@string/contactos" >
        <menu >
            <item
                android:id="@+id/nav_email"
                android:title="@string/email"
                android:icon="@drawable/ic_email">
            </item>
            <item
                android:id="@+id/nav_telemovel"
                android:title="@string/telemovel"
                android:icon="@drawable/ic_phone">
            </item>
        </menu>
    </item>
</menu>