<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearClassificacao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1F5F6F7"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="60dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classificacao_quarto"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/ratingQuarto"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classificacao_estrela"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/ratingComida"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classificacao_staff"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/ratingHospitalidade"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classificacao_servicos"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/ratingServicos"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/tvDataEntrada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classificacao_geral"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/ratingGeral"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:theme="@style/RatingBar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <Button
                    android:id="@+id/btClassificacao"
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:text="@string/enviar"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>